gcc/testsuite/rust/rustc/ui/issues/issue-54189.rs
fn bug() -> impl for <'r> Fn() -> &'r () { || { &() } }
// { dg-error ".E0582." "" { target *-*-* } .-1 }

fn main() {
    let f = bug();
}

